--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,10 @@
   <title>DOM Training</title>
 </head>
 <body>
+  <div>
+    <ul id="app">
+    </ul>
+  </div>
   <script src="./scripts/app.js"></script>
 </body>
 </html>
