botones gatos pares e impares

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <div>
     <ul id="app">
     </ul>
+    <button id="gatosPares">gatos pares</button>
+    <button id="gatosImpares">gatos impares</button>
   </div>
   <script src="./scripts/app.js"></script>
 </body>
